--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  margin-left: 100px;
+  margin-top: 100px;
+  text-align: left;
+}
+
+ul {
+  list-style: none;
+}
