--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,37 @@ code {
 }
 
 .App {
-  margin-left: 100px;
-  margin-top: 100px;
+  margin: 100px;
   text-align: left;
 }
 
 ul {
   list-style: none;
+  margin: 10px;
+}
+
+ul span {
+  margin-left: 5px;
+}
+
+li {
+  margin-top: 10px;
+}
+
+li label {
+  padding: 10px;
+}
+
+
+.selected__Items {
+  height: 200px;
+  width: 200px;
+  border: 1px solid black;
+  margin: 10px;
+  padding: 30px;
+}
+
+h2 {
+  font-size: 24px;
+  margin-top: 50px;
 }
